--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "author": "CnewJ",
   "dependencies": {
-    "discord.js": "11.1.0"
-    "request": "2.81.0",
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
