--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "The Official ApolloTV Discord BOT",
   "main": "bot.js",
   "author": "CnewJ",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
     "discord.io": "https://github.com/woor/discord.io/tarball/gateway_v6",
     "winston": "^3.1.0"
